// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse |"grenade launcher reserves"|: lexer 1`] = `
Array [
  Array [
    "str",
    "grenade launcher reserves",
  ],
]
`;

exports[`parse |"수집가"|: lexer 1`] = `
Array [
  Array [
    "str",
    "수집가",
  ],
]
`;

exports[`parse |( power:>1000 and -modslot:arrival ) |: lexer 1`] = `
Array [
  Array [
    "(",
  ],
  Array [
    "keyword",
    "power",
    ">1000",
  ],
  Array [
    "and",
  ],
  Array [
    "not",
  ],
  Array [
    "keyword",
    "modslot",
    "arrival",
  ],
  Array [
    ")",
  ],
]
`;

exports[`parse |(is:hunter power:>=540) or (is:warlock power:>=560)|: lexer 1`] = `
Array [
  Array [
    "(",
  ],
  Array [
    "keyword",
    "is",
    "hunter",
  ],
  Array [
    "and",
  ],
  Array [
    "keyword",
    "power",
    ">=540",
  ],
  Array [
    ")",
  ],
  Array [
    "or",
  ],
  Array [
    "(",
  ],
  Array [
    "keyword",
    "is",
    "warlock",
  ],
  Array [
    "and",
  ],
  Array [
    "keyword",
    "power",
    ">=560",
  ],
  Array [
    ")",
  ],
]
`;

exports[`parse |(is:weapon and is:sniperrifle) or not (is:armor and modslot:arrival)|: lexer 1`] = `
Array [
  Array [
    "(",
  ],
  Array [
    "keyword",
    "is",
    "weapon",
  ],
  Array [
    "and",
  ],
  Array [
    "keyword",
    "is",
    "sniperrifle",
  ],
  Array [
    ")",
  ],
  Array [
    "or",
  ],
  Array [
    "not",
  ],
  Array [
    "(",
  ],
  Array [
    "keyword",
    "is",
    "armor",
  ],
  Array [
    "and",
  ],
  Array [
    "keyword",
    "modslot",
    "arrival",
  ],
  Array [
    ")",
  ],
]
`;

exports[`parse |(is:weapon is:sniperrifle) or (is:armor modslot:arrival)|: lexer 1`] = `
Array [
  Array [
    "(",
  ],
  Array [
    "keyword",
    "is",
    "weapon",
  ],
  Array [
    "and",
  ],
  Array [
    "keyword",
    "is",
    "sniperrifle",
  ],
  Array [
    ")",
  ],
  Array [
    "or",
  ],
  Array [
    "(",
  ],
  Array [
    "keyword",
    "is",
    "armor",
  ],
  Array [
    "and",
  ],
  Array [
    "keyword",
    "modslot",
    "arrival",
  ],
  Array [
    ")",
  ],
]
`;

exports[`parse |- is:exotic - (power:>1000)|: lexer 1`] = `
Array [
  Array [
    "not",
  ],
  Array [
    "keyword",
    "is",
    "exotic",
  ],
  Array [
    "and",
  ],
  Array [
    "not",
  ],
  Array [
    "(",
  ],
  Array [
    "keyword",
    "power",
    ">1000",
  ],
  Array [
    ")",
  ],
]
`;

exports[`parse |-(power:>1000 and -modslot:arrival)|: lexer 1`] = `
Array [
  Array [
    "not",
  ],
  Array [
    "(",
  ],
  Array [
    "keyword",
    "power",
    ">1000",
  ],
  Array [
    "and",
  ],
  Array [
    "not",
  ],
  Array [
    "keyword",
    "modslot",
    "arrival",
  ],
  Array [
    ")",
  ],
]
`;

exports[`parse |-is:equipped is:haspower is:incurrentchar|: lexer 1`] = `
Array [
  Array [
    "not",
  ],
  Array [
    "keyword",
    "is",
    "equipped",
  ],
  Array [
    "and",
  ],
  Array [
    "keyword",
    "is",
    "haspower",
  ],
  Array [
    "and",
  ],
  Array [
    "keyword",
    "is",
    "incurrentchar",
  ],
]
`;

exports[`parse |-is:exotic -is:locked -is:maxpower -is:tagged stat:total:<55|: lexer 1`] = `
Array [
  Array [
    "not",
  ],
  Array [
    "keyword",
    "is",
    "exotic",
  ],
  Array [
    "and",
  ],
  Array [
    "not",
  ],
  Array [
    "keyword",
    "is",
    "locked",
  ],
  Array [
    "and",
  ],
  Array [
    "not",
  ],
  Array [
    "keyword",
    "is",
    "maxpower",
  ],
  Array [
    "and",
  ],
  Array [
    "not",
  ],
  Array [
    "keyword",
    "is",
    "tagged",
  ],
  Array [
    "and",
  ],
  Array [
    "keyword",
    "stat:total",
    "<55",
  ],
]
`;

exports[`parse |-source:garden -source:lastwish sunsetsafter:arrival|: lexer 1`] = `
Array [
  Array [
    "not",
  ],
  Array [
    "keyword",
    "source",
    "garden",
  ],
  Array [
    "and",
  ],
  Array [
    "not",
  ],
  Array [
    "keyword",
    "source",
    "lastwish",
  ],
  Array [
    "and",
  ],
  Array [
    "keyword",
    "sunsetsafter",
    "arrival",
  ],
]
`;

exports[`parse |-witherhoard|: lexer 1`] = `
Array [
  Array [
    "not",
  ],
  Array [
    "str",
    "witherhoard",
  ],
]
`;

exports[`parse |cluster tracking|: lexer 1`] = `
Array [
  Array [
    "str",
    "cluster",
  ],
  Array [
    "and",
  ],
  Array [
    "str",
    "tracking",
  ],
]
`;

exports[`parse |is:armor2.0|: lexer 1`] = `
Array [
  Array [
    "keyword",
    "is",
    "armor2.0",
  ],
]
`;

exports[`parse |is:blue is:haspower -is:maxpower|: lexer 1`] = `
Array [
  Array [
    "keyword",
    "is",
    "blue",
  ],
  Array [
    "and",
  ],
  Array [
    "keyword",
    "is",
    "haspower",
  ],
  Array [
    "and",
  ],
  Array [
    "not",
  ],
  Array [
    "keyword",
    "is",
    "maxpower",
  ],
]
`;

exports[`parse |is:rocketlauncher (perk:"cluster" or perk:"tracking module")|: lexer 1`] = `
Array [
  Array [
    "keyword",
    "is",
    "rocketlauncher",
  ],
  Array [
    "and",
  ],
  Array [
    "(",
  ],
  Array [
    "keyword",
    "perk",
    "cluster",
  ],
  Array [
    "or",
  ],
  Array [
    "keyword",
    "perk",
    "tracking module",
  ],
  Array [
    ")",
  ],
]
`;

exports[`parse |is:rocketlauncher -"cluster" -"tracking module"|: lexer 1`] = `
Array [
  Array [
    "keyword",
    "is",
    "rocketlauncher",
  ],
  Array [
    "and",
  ],
  Array [
    "not",
  ],
  Array [
    "str",
    "cluster",
  ],
  Array [
    "and",
  ],
  Array [
    "not",
  ],
  Array [
    "str",
    "tracking module",
  ],
]
`;

exports[`parse |is:rocketlauncher -"cluster" -'tracking module'|: lexer 1`] = `
Array [
  Array [
    "keyword",
    "is",
    "rocketlauncher",
  ],
  Array [
    "and",
  ],
  Array [
    "not",
  ],
  Array [
    "str",
    "cluster",
  ],
  Array [
    "and",
  ],
  Array [
    "not",
  ],
  Array [
    "str",
    "tracking module",
  ],
]
`;

exports[`parse |name:"Gahlran's Right Hand"|: lexer 1`] = `
Array [
  Array [
    "keyword",
    "name",
    "gahlran's right hand",
  ],
]
`;

exports[`parse |name:"Hard Light"|: lexer 1`] = `
Array [
  Array [
    "keyword",
    "name",
    "hard light",
  ],
]
`;

exports[`parse |name:'Hard Light'|: lexer 1`] = `
Array [
  Array [
    "keyword",
    "name",
    "hard light",
  ],
]
`;

exports[`parse |not forgotten|: lexer 1`] = `
Array [
  Array [
    "not",
  ],
  Array [
    "str",
    "forgotten",
  ],
]
`;

exports[`parse |perk:"수집가"|: lexer 1`] = `
Array [
  Array [
    "keyword",
    "perk",
    "수집가",
  ],
]
`;

exports[`parse |perk:수집가|: lexer 1`] = `
Array [
  Array [
    "keyword",
    "perk",
    "수집가",
  ],
]
`;

exports[`parse |‘grenade launcher reserves’|: lexer 1`] = `
Array [
  Array [
    "str",
    "grenade launcher reserves",
  ],
]
`;

exports[`parse |“grenade launcher reserves”|: lexer 1`] = `
Array [
  Array [
    "str",
    "grenade launcher reserves",
  ],
]
`;

exports[`parse |수집가|: lexer 1`] = `
Array [
  Array [
    "str",
    "수집가",
  ],
]
`;
